<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.Light"
    tools:context=".VisitActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/barColor"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/visit_title" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar">

        <TextView
            android:id="@+id/toilet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:text="@string/toilet_name_placeholder"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/visit_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:text="@string/visit_time_placeholder"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/toilet_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/toilet_paper" />

        <TextView
            android:id="@+id/visit_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/visit_comment_placeholder"
            android:textAlignment="center"
            android:textSize="16sp" />

        <com.iarcuschin.simpleratingbar.SimpleRatingBar
            android:id="@+id/star_visit_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:srb_borderColor="@color/colorAccent"
            app:srb_fillColor="@color/colorAccent"
            app:srb_numberOfStars="5"
            app:srb_starSize="30dp"
            app:srb_stepSize="0.5"
            app:srb_isIndicator="true"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>